--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nextui-org/react": "1.0.2-beta.2",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
