--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@nextui-org/react": "1.0.2-beta.2",
+    "axios": "0.27.2",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
