--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "0.27.2",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
