--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@nextui-org/react": "1.0.2-beta.2",
     "axios": "0.27.2",
+    "canvas-confetti": "1.5.1",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sharp": "^0.30.4"
+    "sharp": "0.30.4"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
