--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sharp": "0.30.4"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "1.4.2",
     "@types/node": "17.0.29",
     "@types/react": "18.0.1",
     "typescript": "4.6.3"
